--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,20 @@
 <h1>Users Index</h1>
 
 <ul>
-<% @users.each do |r| %>
+<% @users.each do |user| %>
 
-	<li><%= r.first_name + " " + r.last_name %></br>
-	<%= r.email %></br>
-	<%= r.address %></br>
-	<%= r.city %></br>
-	<%= r.state %></br>
-	<%= r.zipcode %></li>
+	<li><%= user.first_name + " " + user.last_name %></br>
+	<%= user.email %></br>
+	<%= user.address %></br>
+	<%= user.city %></br>
+	<%= user.state %></br>
+	<%= user.zipcode %></li>
 
-	<% end %>
 </ul>
+
+<ul>
+	<li><%= button_to "View User", user_url(user.id), controller: :users, action: :show, method: :get %></li>
+	<li><%= button_to "Edit User Info", edit_user_url(user.id), controller: :users, action: :edit, method: :get %></li>
+	<li><%= button_to "Delete", {action: "destroy", id: user.id}, {method: :delete, data:{confirm: "Are you sure?"}, :class => "button"} %></li></br>
+</ul>
+<% end %>
