bootstrap cleanup. need to add out custom colors and re-generate, but this is something to work with

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,16 @@
 <html>
 <head>
   <title>Hoptoit</title>
+  <!-- Mobile first! -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<nav class="navbar navbar-default" role="navigation">
+  <a class="navbar-brand" href="#">Hop To It</a>
+</nav>
 <%= yield %>
 
 </body>
