--- a/app/views/issues/edit.html.erb
+++ b/app/views/issues/edit.html.erb
@@ -1,4 +1,4 @@
- <%= form_for :issues do |f| %>
+ <%= form_for @issue do |f| %>
       <p>
         <%= f.label :title, class:"inputTextAlt" %>
         <%= f.text_field :title, class:"inputReset" %>
