--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -9,6 +9,15 @@
 				<ul>		
 					<li>
 						Description: <%= i.desc %>
+					</li>
+					<li>
+						<%=link_to "delete", issue_path(:id => i.id), method:'delete' %>
+					</li>
+					<li>
+						<%=link_to "edit", edit_issue_path(:id => i.id)%>
+					</li>
+					<li>
+						ID <%=i.id %>
 					</li>	
 					<li>
 						Funding Goal:<%= i.funding_goal %>
@@ -24,5 +33,8 @@
 					</li>
 				</ul>	
 		<% end %>
+
+		<%= link_to "New Issue", new_issue_path%>
+
 
 <ul>
