--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Organizations#Index
 
 =notice
-=link_to "new org", new_organization_path
+=link_to "new org", organizations_search_path
 
 %ul
   -@orgs.each do |o|
