testing on issues done??? started work on up and down vote functions

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -13,6 +13,7 @@
 					<li>
 						<%=link_to "delete", issue_path(:id => i.id), method:'delete' %>
 					</li>
+						<%= link_to "UP VOTE"
 					<li>
 						<%=link_to "edit", edit_issue_path(:id => i.id)%>
 					</li>
