--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<nav>
+		<ul class="navtabs">
+		  <li><a href="/">Home</a></li>
+		  <li><a href="/logout">Log Out</a></li>
+		</ul>
+</nav>
 <%= yield %>
 
 </body>
