--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -13,7 +13,11 @@
 					<li>
 						<%=link_to "delete", issue_path(:id => i.id), method:'delete' %>
 					</li>
-						<%= link_to "UP VOTE"
+					<li>
+						Votes: <%= i.votes %>
+						<%= link_to "UP VOTE", upvote_issue_path(:id => i.id), method:'post' %>
+						<%= link_to "DOWN VOTE", downvote_issue_path(:id => i.id), method:'post' %>
+					</li>
 					<li>
 						<%=link_to "edit", edit_issue_path(:id => i.id)%>
 					</li>
