--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,18 @@
       <li><%= link_to "Users",users_path%></li>
       <li><%= link_to "Organizations",organizations_path%></li>
       <li><%= link_to "Issues",issues_path%></li>
-      <li><a href="/logout">Log Out</a></li>
+      <li ><%= link_to_if( current_user.nil?, "Sign In", "/authentications/new") do
+         link_to( "Sign Out", "/logout")
+       end
+    %></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 
 </nav>
+
+
+
+
 <%= yield %>
 
 </body>
