--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
       <li><%= link_to "Users",users_path%></li>
       <li><%= link_to "Organizations",organizations_path%></li>
       <li><%= link_to "Issues",issues_path%></li>
-      <li ><%= link_to_if( current_user.nil?, "Sign In", "/authentications/new") do
-         link_to( "Sign Out", "/logout")
+      <li ><%= link_to_if( current_user.nil?, "Sign Up", "/users/new") do
+         link_to( "", "")
        end
     %></li>
     </ul>
