--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -8,8 +8,8 @@ $yellow:rgba(235,227,170,1);
 
 
 body{
-  /*background: url(<%= asset_path 'pw_pattern5.png' %>);*/
-	background-color: $yellow;
+  background: url(<%= asset_path 'bgnoise_lg.png' %>);
+	/*background-color: $yellow;*/
   color: $darkpurple;
 }
 
@@ -34,3 +34,7 @@ a {
   border: 2px solid $seafoam;
   border-radius: 20px;
 } 
+.container {
+  background:rgba(255,255,255,0.7);
+  border-radius: 25px;
+}
