--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,13 @@
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
-<%= yield %>
+<div class="row ">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-10 container">
+    <%= yield %>
+  </div>
+</div>  
 
 </body>
 </html>
