--- a/app/views/organizations/_form.html.haml
+++ b/app/views/organizations/_form.html.haml
@@ -27,4 +27,5 @@
     =f.text_field :city, placeholder: "City", class:"form-control"
     =f.text_field :state, placeholder: "State", class:"form-control"
     =f.text_field :zipcode, {placeholder: "Zip Code", type: "tel", class:"form-control"}
+    =f.text_field :charity_verifier_id
   =f.submit nil, class:"btn btn-default"
