a few more tweaks for charity/org relations

--- a/app/views/organizations/_form.html.haml
+++ b/app/views/organizations/_form.html.haml
@@ -27,5 +27,5 @@
     =f.text_field :city, placeholder: "City", class:"form-control"
     =f.text_field :state, placeholder: "State", class:"form-control"
     =f.text_field :zipcode, {placeholder: "Zip Code", type: "tel", class:"form-control"}
-    =f.text_field :charity_verifier_id
+    =f.text_field :charity_verifier_id, {class:"hidden"}
   =f.submit nil, class:"btn btn-default"
