--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,11 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><%= link_to "Users",users_path%></li>
+    <% if current_user %>
+      <% if current_user.admin %>
+        <li><%= link_to "Users",users_path%></li>
+        <% end %>
+      <% end %>
       <li><%= link_to "Organizations",organizations_path%></li>
       <li><%= link_to "Issues",issues_path%></li>
       <li ><%= link_to_if( current_user.nil?, "Sign Up", "/users/new") do
