issues and orgs associated, orgs show up in issues index view

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -36,6 +36,12 @@
 					<li>
 						Funding Date: <%= i.funding_date %>
 					</li>
+					<li>
+						Organization: <% i.organizations.each do |o| %>
+							<%= o.organization_name %>
+							<br />
+							<%end%>
+					</li>
 				</ul>	
 		<% end %>
 
