--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -12,7 +12,11 @@
 
 	<%= user.submit "Log In" %> 
 
-
 	<% end %>
+	<%= link_to "forgot password?", new_password_reset_path %>
+		<div class="field">
+			<%= label_tag :remember_me %>
+			<%= check_box_tag :remember_me, 1, params[:remember_me] %>
+		</div>
 
 </div>
