action mailer create user and forgot password emails working

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,8 +16,8 @@
     </div>
   <% end %>
 
-	<%= u.label :first_name, "First Name" %>
-	<%= u.text_field :first_name %><br />
+	<%= user.label :first_name, "First Name" %>
+	<%= user.text_field :first_name %><br />
 
 	<%= user.label :last_name, "Last Name" %>
 	<%= user.text_field :last_name %><br />
