--- a/app/views/users_mailer/new_user_notification.text.erb
+++ b/app/views/users_mailer/new_user_notification.text.erb
@@ -1,3 +1,3 @@
-<h1>Welcome!</h1>
+Welcome!
 
-<p>Thank you for joining Hop To It! We are happy to have you.</p>
+Thank you for joining Hop To It! We are happy to have you.
