updated functionality and design for issues

--- a/app/views/organizations/show.html.haml
+++ b/app/views/organizations/show.html.haml
@@ -20,7 +20,7 @@
       =link_to "edit", edit_organization_path(@org), class:"btn btn-default"
       =link_to "delete", organization_path, method:'delete', class:"btn btn-default"
       /=link_to "index", organizations_path, class:"btn btn-default"
-      =link_to "new", "/issues/new?id=#{@org.id}"
+      =link_to "new", "/issues/new?id=#{@org.id}", class:"btn btn-default"
 .row.irsInfo
   .col-md-12
     %h3 more info about this organization
