--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,12 @@
   <div class="col-md-1">
   </div>
   <div class="col-md-10 container">
+  <% if notice %>
+    <div class="alert alert-warning alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <%= notice %>
+    </div>
+  <% end %>
     <%= yield %>
   </div>
 </div>  
