--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -18,10 +18,10 @@
 						<a href='#' onclick="vote(<%= i.id %>, -1);" class="glyphicon glyphicon-thumbs-down"></a>
 					</li>	
 					<li>
-						Funding Goal: <%= number_to_currency(i.funding_goal) %>
+						Funding Goal: <%= number_to_currency(i.funding_goal, precision: 0) %>
 					</li>	
 					<li>
-						Pledged Total: <%= i.pledged_total %>
+						Pledged Total: <%= number_to_currency(i.pledged_total, precision: 0) %>
 					</li>	
 					<li>
 						Number of Backers: <%= i.num_backers %>
@@ -40,7 +40,7 @@
 					</li>
 					<li>
 						<% if current_user %>
-      					<%=link_to "Delete", issue_path(:id => i.id), method:'delete'%>
+      					<%=link_to "Delete", issue_path(:id => i.id), method:'delete',:confirm =>" ARE YOU SURE YOU WANT TO DELETE THIS ISSUE????"%>
 				      <% end %>	
 					</li>
 					<li>
