fixed some testing issues

--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Organizations
 
-=link_to "new org", organizations_search_path
+=link_to "Create a new Organization", organizations_search_path, class:"btn btn-default"
 
 .row
   -@orgs.each do |o|
