--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -30,7 +30,7 @@
 	</div>
 </div>
 <div class="row">
-	
+	<div class="">
 		<%= form_tag(donate_issue_path, method: "post", :class => "col-md-2 form-group form-inline") do %>
  			
  			<%= label_tag(:q, "Donate:") %>
@@ -38,6 +38,7 @@
   			<%= submit_tag("Donate", :class => "btn btn-default") %>
   			
 			<% end %>
+	</div>
 </div>
 
 
