--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -8,8 +8,8 @@ $yellow:rgba(235,227,170,1);
 
 
 body{
+	background-color: $yellow;
   background: url(<%= asset_path 'bgnoise_lg.png' %>);
-	/*background-color: $yellow;*/
   color: $darkpurple;
 }
 
@@ -37,6 +37,7 @@ a {
 .container {
   background:rgba(255,255,255,0.7);
   border-radius: 20px;
+  position: relative;
 }
 
 .logoDiv {
@@ -47,3 +48,44 @@ a {
 .listStyle{
   list-style-type:  none
 }
+
+.navbar-form {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 20px;
+  margin: 0;
+}
+
+.round-btn {
+  background: $seafoam;
+  border-radius: 100%;
+  border: 2px dashed white;
+  padding: 1em;
+  text-align: center;
+  width: 15vh;
+  height: 15vh;
+}
+
+.round-btn span{
+position: relative;
+height: 15vh;
+width: 15vh;
+top: 20%;
+text-decoration: none;
+}
+
+.round-btn:hover {
+  background: darken($seafoam, 10%);
+  text-decoration: none;
+  color: white;
+}
+
+.upper-right {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+// .upper-right:after {
+//   clear: both;
+// }
