--- a/app/views/authentications/_form.html.haml
+++ b/app/views/authentications/_form.html.haml
@@ -1,4 +1,4 @@
-=form_for User.new,{url:"/authentications", method:"post", html:{role:"form", class:"form-inline"}} do |u|
+=form_for User.new,{url:"/authentications", method:"post", html:{role:"form", class:"form-inline navbar-form"}} do |u|
   .form-group
     =u.text_field :email, placeholder:"Email", class:"form-control"
   .form-group
