move embedded js to its own file for the org search.

--- a/app/views/organizations/search.html.haml
+++ b/app/views/organizations/search.html.haml
@@ -1,3 +1,6 @@
+-content_for :head do
+  =javascript_include_tag "org_search"
+
 .row
   .col-md-3
   .col-md-6
@@ -7,38 +10,3 @@
   .col-md-3
   .col-md-6.charityReturns
     %table{class:"table table-condensed table-hover"}
-
-
-:javascript
-  //$(document).on("page:load || page:change", searchNames)
-
-  // function searchNames(){
-    // $("#nameBox").on("change", function(){
-    $("#nameBox").keypress(function(){
-      if ($("#nameBox").val().length >= 3) {
-        getJson();
-      }
-    });
-  // };
-  
-  function getJson(){
-    $.get("/charityverifier/"+ $("#nameBox").val(), fillText);
-  }
-
-  function fillText(data){
-
-    if ($(".charityReturns table").html().length > 0){
-      $(".charityReturns table").html("");
-    };
-
-    if(data.length != 0){
-      for(var i = 0; i < data.length; ++i){
-        $(".charityReturns table").append(
-          "<tr> <td>" + data[i].org_name + "</td> <td>" + data[i].city + ", " + data[i].state + "</td><td> <a class='btn btn-default' href='/organizations/new?id=" + data[i].id +"'>choose</a></td></tr>"
-        );
-      }
-    }
-    else {
-      $(".charityReturns table").append("<tr><td>No results match that organization name.</td></tr>")
-    }
-  };
